src/style.css
@font-face {
    font-family: 'Segoe Print Bold';
    src: url('fonts/SEGOEPRB.TTF');
}

@font-face {
    font-family: 'Segoe Print';
    src: url('fonts/SEGOEPR.TTF');
}

body {
	font-family: 'Istok Web', sans-serif;
	background: url('imgs/fundomaior.png');
	background-size: auto 100%;
	background-attachment: fixed;
    background-position: center;
	background-repeat: no-repeat;
	background-color: #FFF;
	margin: 0px;
	padding: 0px;
}

/* index */

#index-img {
	width: 75vmin;
}

#enter-page-body {
	background: url('imgs/fundo-entrada.png');
	background-size: auto 100%;
	background-attachment: fixed;
    background-position: center;
	background-repeat: no-repeat;
}

#enter-page-div {
	margin: 0px;
	padding: 0px;
	text-align: center;
}

#index-margin-top {
	width: 100%;
	height: 50%;
	float: left;
	margin-bottom: -13.5vmin;
}

#entrar-btn {
	width: 20vmin;
	height: auto;
}

/* end of index */

/* content */

#content-wrapper {
	width: 70%;
	height: 100%;
	margin: 0 auto;
	padding-top: 5vh;
	text-align: center;
}

@media(max-width: 1023px) {
	#content-wrapper {
		width: 100%;
		margin: auto;
	}
}

#app-header-img {
	width: 15vh;
	padding-left: 4vh;
}

#top-wrapper {
	width: 66vh;
	margin: 0 auto;
	padding-bottom: 2.5vh;
	text-align: left;
	z-index: -5;
}

.social-icon {
	width: 4vh;
}

#footer-wrapper {
	position: relative;
	margin-top: 3vh;
}

#content-box-wrapper {
	position: relative;
	margin: 0 auto;
	width: 66vh;
	height: 76vh;
	border: 1px solid #F0F0F0;
	background-color: rgba(240, 240, 240, 0.9);
}

#content-box {
	height: 61.75vh;
}

#content-box-header {
	position: absolute;
	top: -2vh;
	right: 0px;
	width: 20vh;
	font-size: 4vh;
	color: #FFF;
	line-height: 5vh;
	text-shadow:
		-1px -1px 0 #000,  
		1px -1px 0 #000,
		-1px 1px 0 #000,
		1px 1px 0 #000;
}

#content-box-header img {
	width: 100%;
	height: 6.5%;
}

.header-left {
	float: right;
}

.header-right {
	float: left;
}

.back-right {
	left: 0;
}

.content-back-arrow {
	margin-top: 3vh;
    padding-right: 3vh;
    padding-left: 3vh;
	height: auto;
	position: absolute;
	bottom: 0;
}

.content-back-arrow img {
	width: 15vh;
}

.back-left {
	right: 0;
}

/* end of content */

/* menu */

.menu-square-icon {
	width: 24vh;
	height: 24vh;
	margin: 3.5vh;
	display: inline-block;
	border: 1px solid #F0F0F0;
	background-color: rgba(240, 240, 240, 0.9);
}

.menu-square-icon img {
	width: 96%;
	height: 96%;
	margin: 1%;
}

#menu-wrapper {
	margin: 0 auto;
	width: 66vh;
}

/* end of menu */

/* contato */

#contato-form {
	text-align: left;
	padding: 3%;
	width: 100%;
	height: 100%;
	font-size: 2vh;
}

#contato-submit {
	width: 15vh;
}

#contato-form input {
	font-size: 2vh;
}

#contato-mensagem {
	resize: none;
	width: 62vh;
	font-size: 2vh;
}

.contato-submit-disabled {
	-webkit-filter: grayscale(100%); /* Chrome, Safari, Opera */
    filter: grayscale(100%);
}

#contato-form .has-error {
	color: #f00;
}

#contato-form .has-error .glyphicon-remove {
	display: inline-block !important;
}

#contato-form .has-success .glyphicon-ok {
	display: inline-block !important;
}

#contato-form .has-success {
	color: #070;
}

/* end of contato */

/* sobre */

#sobre-content {
	text-align: left;
	padding: 3%;
}

/* end of sobre */

/* servicos */

#servicos-content {
	text-align: left;
	padding: 1%;
}

@media(orientation: portrait) {
	.servicos-content-divulgacao {
		padding: 3.5vh !important;
	}
}

#servicos-content-l {
    margin-left: 1.5vh;
	text-align: left;
	float: left;
}

#servicos-content-c {
    text-align: center;
    width: 50%;
	position: relative;
	z-index: 10;
    clear: both;
    margin: 0 auto;
    padding-top: 0.75vh;
}

#servicos-content-c .servicos-li {
	left: 0.12vh;
}

#servicos-content-l, #servicos-content-r {
	margin-top: -2.5vh;
	width: 30vh;
}

#servicos-content-l, #servicos-content-r, #servicos-content-c {
	font-size: 2.2vh;
}

#servicos-content-r {
    margin-right: 1.5vh;
	text-align: right;
	float: right;
}

.servicos-content-header {
	font-weight: bold;
	font-size: 1.25em;
}

.servicos-description-l {
	float: left;
	width: 26vh;
}

.servicos-description-r {
	float: right;
	width: 26vh;
}

#servicos-content-divulgacao {
	margin-top: 12vh;
	font-weight: bold;
	width: 38vh;
	font-size: 2.2vh;
	z-index: 10;
}

#servicos-content-divulgacao-img {
	position: relative;
	z-index: 0;
}

#servicos-content-divulgacao-img img {
    position: absolute;
    top: -29vh;
    right: 0;
    height: 30vh;
    width: auto;
}

#servicos-content-divulgacao .servicos-description {
	margin-left: 3vh;
}

#servicos-img-footer {
	position: relative;
	z-index: 0;
	margin-top: 4.5vh;
}

#servicos-img-footer img {
	position: absolute;
	bottom: 0;
}

#servicos-img-footer > img:nth-child(1) {
	left: 1vh;
    width: auto;
    height: 18vh;
}

#servicos-img-footer > img:nth-child(2) {
	right: 2vh;
    width: auto;
    height: 23vh;
}

.servicos-description-l {
	float: right;
}

.servicos-div {
	clear: both;
}

.servicos-div:not(:last-child) {
	margin-bottom: 1vh;
}

.servicos-ul {
	position: relative;
}

.servicos-ul .servicos-li {
	position: absolute;
	top: 0;
}

#servicos-content-l .servicos-description {
	margin-left: 3vh;
}

#servicos-content-r .servicos-description {
	margin-right: 3vh;
}

.servicos-ul {
	margin-top: 2.5vh;
}

.servicos-li {
	width: 2.5vh;
	height: 2.5vh;
	display: inline-block;
}

#servicos-content-r .servicos-li {
	-moz-transform: scaleX(-1);
	-o-transform: scaleX(-1);
	-webkit-transform: scaleX(-1);
	transform: scaleX(-1);
	filter: FlipH;
	-ms-filter: "FlipH";
	margin-left: -2.5vh;
}


#servicos-content-l > div:nth-child(3) > div, #servicos-content-r > div:nth-child(1) > div, #servicos-content-c > div.servicos-ul > div, #servicos-content-divulgacao > div:nth-child(1), #servicos-content-divulgacao > div:nth-child(1) > div {
    background: url('imgs/nav-icons/splash-pink.png');
	background-size: auto 100%;
    background-position: center;
	background-repeat: no-repeat;
}


#servicos-content-l > div:nth-child(1) > div, #servicos-content-r > div:nth-child(3) > div, #servicos-content-divulgacao > div:nth-child(4):not(.servicos-description), #servicos-content-divulgacao > div:nth-child(3) > div {
    background: url('imgs/nav-icons/splash-blue.png');
	background-size: auto 100%;
    background-position: center;
	background-repeat: no-repeat;
}

#servicos-header {
	margin-top: -3.5vh;
	margin-bottom: 2.5vh;
}

.servicos-selected {
	font-size: 1.75em;
	font-weight: bold;
}

#servicos-header {
	font-size: 2vh;
}

#servicos-header a, #servicos-header a:visited, #servicos-header a:hover {
	text-decoration: none;
	color: #000;
}

/* end of servicos */

/* galeria */

#galeria-content {
	text-align: left;
	padding: 3%;
}

/* end of galeria */

